--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,6 @@
 extends layout
 block content
+  h2.home-intro Sign Up to Write a New Message
   if user
     h3.userWelcomeMsg Welcome back #{user.username}!
   if newMsg
